# s2e

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  PLAN-coverage-foldin.md  PLAN.md  README.md  cf-run.js  cli.js  cluster.js  cog.js  gpu-plan.md  index.js  package.json  stac.js  worker.js
.github/workflows/: release.yml
aoi/: README.md  collect-lng.sh  collect.mjs  lng-select.geojson  lng-select.sh  lng-terminals.geojson  lng-terminals.sh  lng-terminals.sql  ras-laffan-das-island.geojson  uk-gas-import-terminals.geojson  vnf-ecuador.geojson
cli/: Cargo.toml
cli/assets/: integrated_transmittances.json
cli/src/: archive.rs  detect.rs  gpu.rs  main.rs  models.rs  plume.rs  read.rs  record.rs  stac.rs  view.rs
cli/src/plume/: background.rs  chip.rs  wind.rs
cloud/: README.md  box.sh  cloud-init-gpu.yaml  cloud-init.yaml  daily.sh  emissions.sh  store.sh
cloud/detectors/: flares.sh  hypergas.sh  mars.sh
cloud/guide/: README.md
cloud/guide/assets/: README.md  osm-candidate-footprints.geojson
cloud/guide/sources/: 01-identity-location.md  02-netia-vs-atman-verdict.md  03-energy-emissions.md  04-corporate-supply-chain.md  05-physical-specs.md
cloudferro/: Makefile  box.sh  cloud-init.yaml  openrc.sh  provision.sh  s2-flares-openrc-2fa.sh
core/: Cargo.toml
core/src/: cluster.rs  coverage.rs  detect.rs  geo.rs  lib.rs  plume.rs  score.rs
data/: valid-plumes.txt
data/cf/aoi/: 39RWJ_2026-05-28.csv  39RWJ_2026-06-02.csv  39RWJ_2026-06-07.csv  39RWJ_2026-06-12.csv  39RWJ_2026-06-14.csv  39RWJ_2026-06-17.csv  39RWJ_2026-06-22.csv  39RWJ_2026-06-27.csv
experiments/slstr/: .gitignore  NOTES.md  README.md  pyproject.toml
experiments/slstr/scripts/: fetch_granule.py  find_granules.py  probe.py  run_detection.py  sanity_check.py
experiments/slstr/src/: cdse.py  detect.py  reader.py
gpu/: Cargo.toml  build.rs
gpu/src/: lib.rs  shim.cu
lambda/: api.js  deploy.sh  handler.js  scene-store.js
lib/: cluster.js  cog-gdal.js  cog.js  coverage.js  detect.js  geo.js  index.js  run.js  score.js  stac.js
test/: bench-ras-laffan.mjs  bench.html  cog-new.js  glint-real.test.mjs  glint.test.mjs  manual.html  score.test.mjs
wasm/: Cargo.toml
wasm/src/: lib.rs
