# s2-flares rust workspace. one pure methodology core (`core/`) compiling both to
# a native gdal-backed cli (`cli/`) and to wasm for browser/lambda (`wasm/`).
# the frozen methodology lives once in core; the split is i/o only — exactly the
# detect.js-takes-typed-arrays / io-in-cog.js seam the js lineage already had.
# gpu/ is the CUDA-isolated nvJPEG2000 shim — pulled only by `cli --features gpu`
# (a CUDA box); the default cli, core, and wasm builds never touch it.
[workspace]
members = ["core", "cli", "wasm", "gpu"]
# gpu's build.rs needs nvcc; keep it out of bare `cargo build`/`test` at the root so
# non-CUDA hosts (dev/CI) stay green. it builds only via `-p s2-flares-gpu` or when
# `cli --features gpu` pulls it in.
default-members = ["core", "cli", "wasm"]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 3
lto = true
