[package]
name = "s2-flares-cli"
version.workspace = true
edition.workspace = true
description = "native gdal-backed s2-flares cli — reproduces cli.js (local) and cf-run.js (cdse bulk)"

[[bin]]
name = "s2-flares"
path = "src/main.rs"

[dependencies]
s2-flares-core = { path = "../core", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
gdal = { version = "0.17", features = ["bindgen"] }
ureq = { version = "2", features = ["json"] }
serde_json = "1"
rayon = "1"
