[package]
name = "s2e-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure Sentinel-2 flare, plume, retrieval and clustering methodology"

[lib]
name = "s2e_core"
path = "src/lib.rs"

# pure compute, no i/o. serde is optional (off by default → core stays dependency-
# free) so the cli/wasm shells can (de)serialize Detection/Cluster across their seams.
[features]
serde = ["dep:serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
