[package]
name = "s2e-wasm"
version.workspace = true
edition.workspace = true
description = "wasm-bindgen shim exposing the s2e core (detect + cluster + score) to js"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
s2e-core = { path = "../core", features = ["serde"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1", features = ["derive"] }
